--- a/RZDKursovoy/Dispatcher_AddTrain.xaml
+++ b/RZDKursovoy/Dispatcher_AddTrain.xaml
@@ -11,6 +11,10 @@
         <GroupBox Header="Добавление поезда">
             <Grid x:Name="TrainGrid">
                 <TextBox x:Name="TrainNumber_BOX" MaxLength="5" PreviewKeyUp="TrainNumber_BOX_PreviewKeyUp" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center" Height="36" Width="282" HorizontalAlignment="Center" Margin="0,0,0,190">
+                    <TextBox.ContextMenu>
+                        <ContextMenu>
+                        </ContextMenu>
+                    </TextBox.ContextMenu>
                     <materialDesign:HintAssist.Hint>
                         <StackPanel
                                     Orientation="Horizontal"
@@ -27,6 +31,10 @@
                 <ComboBox Loaded="TrainType_BOX_Loaded" PreviewTextInput="TrainType_BOX_PreviewTextInput" PreviewKeyUp="TrainType_BOX_PreviewKeyUp" materialDesign:HintAssist.Hint="Тип поезда" x:Name="TrainType_BOX"
                     IsEditable="True"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,10" Width="289">
+                    <ComboBox.ContextMenu>
+                        <ContextMenu>
+                        </ContextMenu>
+                    </ComboBox.ContextMenu>
                 </ComboBox>
                 <ComboBox Loaded="TrainRout_BOX_Loaded" materialDesign:HintAssist.Hint="Маршрут" x:Name="TrainRout_BOX"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,80,0,0" Width="289">
