--- a/RZDKursovoy/Admin_AddUser.xaml
+++ b/RZDKursovoy/Admin_AddUser.xaml
@@ -16,12 +16,8 @@
                         </ContextMenu>
                     </TextBox.ContextMenu>
                     <materialDesign:HintAssist.Hint>
-                        <StackPanel
-                                    Orientation="Horizontal"
-                                    Margin="-2 0 0 0">
-                            <TextBlock>
-                                    Логин
-                            </TextBlock>
+                        <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                            <TextBlock>Логин</TextBlock>
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
@@ -34,12 +30,8 @@
                         </ContextMenu>
                     </TextBox.ContextMenu>
                     <materialDesign:HintAssist.Hint>
-                        <StackPanel
-                                    Orientation="Horizontal"
-                                    Margin="-2 0 0 0">
-                            <TextBlock>
-                                    Пароль
-                            </TextBlock>
+                        <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                            <TextBlock>Пароль</TextBlock>
                         </StackPanel>
                     </materialDesign:HintAssist.Hint>
                 </TextBox>
