--- a/RZDKursovoy/Dispatcher_AddForm.xaml
+++ b/RZDKursovoy/Dispatcher_AddForm.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:RZDKursovoy"
         mc:Ignorable="d"
         x:Name="BestWindow"
-        Title="Добавление" Height="350" Width="500" MinHeight="350" MinWidth="500">
+        Title="Добавление" Height="350" Width="500" WindowStartupLocation="CenterScreen" MinHeight="350" MinWidth="500">
     <Grid>
         
     </Grid>
